--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@typescript-eslint/parser": "^5.12.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^2.5.0"
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-eslint-comments": "^3.2.0"
   },
   "peerDependencies": {
     "eslint": "^7.32.0 || ^8.2.0"
