--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-tsap",
-  "version": "0.2.0",
-  "description": "",
+  "version": "0.3.0",
+  "description": "ESLint config `typescript` + `airbnb` + `prettier`",
   "main": "index.cjs",
   "exports": {
     ".": "./index.cjs",
